--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "adv": "^0.1.5",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest-enzyme": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
     "jest": "^24.9.0"
   }
 }
